--- a/eurka/application-pro.yml
+++ b/eurka/application-pro.yml
@@ -1,13 +1,14 @@
 server:
-  port: 8002
+  port: 8762
 
-spring:
-  application:
-    # 应用名称
-    name: eureka-server
 eureka:
+  instance:
+    hostname: localhost
+  server:
+    enable-self-preservation: false      # 关闭自我保护模式（默认为打开）
+    eviction-interval-timer-in-ms: 5000  # 续期时间，即扫描失效服务的间隔时间（缺省为60*1000ms）
   client:
-  register-with-eureka: false #false表示不向注册中心注册自己。
-  fetch-registry: false #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
-  service-url:
-    defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
